# ChatBot-vocal

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  README_EQUIPE.md  README_MVP.md  cahier_des_charges_corrige.md  pyproject.toml  pyrightconfig.json  readme_tensor_flow_big_data_chatbot_projet_final.md  render.yaml  requirements.txt  run_api.py  run_ingestion.py
src/nosql_project/: __init__.py  __main__.py  api.py  config.py  engines.py  ingestion.py  mongo_ingestion.py  mongo_utils.py  pipeline.py  schemas.py
src/nosql_project/web/: index.html
tests/: test_api.py  test_engines.py  test_ingestion.py  test_mongo_ingestion.py  test_pipeline.py
